--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,5 +32,5 @@ services:
     environment:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_PASSWORD=1233
 #      - TZ=Europe/Moscow
